# domain-coloring

./: .bridge_gh_action.yml  .gitattributes  .gitignore  README.md  TODO.md  build_web.sh  justfile  pubspec.yaml
.github/workflows/: publish_page.yml  web.yml
ios/Runner/: bridge_generated.h
lib/: main.dart
linux/: rust.cmake
native/: Cargo.toml
native/src/: api.rs  ast.rs  domain_color.rs  grammar.bnf  lexer.rs  lexing.rs  lib.rs  parser.rs  parsing.rs  tests.rs
native/tests/: domain_coloring.rs  parsing.rs
