[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
anyhow = "1"
flutter_rust_bridge = "1"
num = "0.4.1"
hsluv = "0.3.1"
rayon = "1.8.0"
wasm-bindgen = "0.2.89"

[dev-dependencies]
tempfile = "3.8"
